--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,84 @@ body {
     scale:0.8;
    transform: scaleX(-1);
 }
+
+#correct {
+    height: 400;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -200px; /* Half the height */
+    margin-left: -200px; /* Half the width */
+    opacity: 0;
+
+}
+
+.selected {
+    animation: flash 2s ;
+}
+.fading {
+    animation: fade 3s;
+}
+
+#incorrect {
+    height: 500;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -250px; /* Half the height */
+    margin-left: -250px; /* Half the width */
+    opacity: 0;
+}
+#hider{
+    z-index: 100;
+    position: absolute;
+    background-color: white;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    height:100%;
+    width:100%;
+    opacity: 0;
+}
+@keyframes flash {
+    0% {opacity: 0;}
+    5% {opacity: 1;}
+    10% {opacity: 0;}
+    15% {opacity: 1;}
+    20% {opacity: 0;}
+    25% {opacity: 1;}
+    95% {opacity: 1;}
+    100% {opacity: 0;}
+}
+@keyframes fade {
+    0% {opacity: 0;}
+    25% {opacity: 1;}
+    90% {opacity: 1;}
+    100% {opacity: 0;}
+}
+@keyframes fade2 {
+    0% {opacity: 0;}
+    50% {opacity: 1;}
+    100% {opacity: 1;}
+}
+.fading2 {
+    animation: fade2 2s;
+}
+
+#finishedText {
+    text-align: center;
+    z-index: 101;
+    
+    position: absolute;
+    background-color: white;
+    top:200px;
+    left:0;
+    bottom:0;
+    right:0;
+    opacity: 0;
+}
+#finishedText > h1 {
+    top: 200px;
+    color: purple;
+}
